partial/force-app/main/default/objects/Account/fields/archivedOn__c.field-meta.xml
<CustomField>
    <fullName>archivedOn__c</fullName>
    <label>Archived On</label>
    <type>Date</type>
</CustomField>