partial/force-app/main/default/objects/Account/fields/Building_Name__c.field-meta.xml
<CustomField>
    <fullName>Building_Name__c</fullName>
    <label>Building Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>