partial/force-app/main/default/objects/Account/fields/Category_Id__c.field-meta.xml
<CustomField>
    <fullName>Category_Id__c</fullName>
    <label>Category Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>