partial/force-app/main/default/objects/Account/fields/Country_Id__c.field-meta.xml
<CustomField>
    <fullName>Country_Id__c</fullName>
    <label>Country</label>
    <length>20</length>
    <type>Text</type>
</CustomField>