partial/force-app/main/default/objects/Account/fields/Country_of_Registration__c.field-meta.xml
<CustomField>
    <fullName>Country_of_Registration__c</fullName>
    <label>Country of Registration</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>