partial/force-app/main/default/objects/Account/fields/DXF_SF_Prop_ID__c.field-meta.xml
<CustomField>
    <fullName>DXF_SF_Prop_ID__c</fullName>
    <label>DXF_SF_Prop_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>