partial/force-app/main/default/objects/Account/fields/ETag__c.field-meta.xml
<CustomField>
    <fullName>ETag__c</fullName>
    <label>ETag</label>
    <length>50</length>
    <type>Text</type>
</CustomField>