partial/force-app/main/default/objects/Account/fields/Geo__c.field-meta.xml
<CustomField>
    <fullName>Geo__c</fullName>
    <label>Geo</label>
    <scale>3</scale>
    <type>Location</type>
</CustomField>