partial/force-app/main/default/objects/Account/fields/Identity_Check__c.field-meta.xml
<CustomField>
    <fullName>Identity_Check__c</fullName>
    <label>Identity Check</label>
    <length>20</length>
    <type>Text</type>
</CustomField>