partial/force-app/main/default/objects/Account/fields/Income_range__c.field-meta.xml
<CustomField>
    <fullName>Income_range__c</fullName>
    <label>Income range</label>
    <length>20</length>
    <type>Text</type>
</CustomField>