partial/force-app/main/default/objects/Account/fields/Last_call__c.field-meta.xml
<CustomField>
    <fullName>Last_call__c</fullName>
    <label>Last Call</label>
    <type>Date</type>
</CustomField>