partial/force-app/main/default/objects/Account/fields/Line_1__c.field-meta.xml
<CustomField>
    <fullName>Line_1__c</fullName>
    <label>Address Line 1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>