partial/force-app/main/default/objects/Account/fields/Line_2__c.field-meta.xml
<CustomField>
    <fullName>Line_2__c</fullName>
    <label>Address Line 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>