partial/force-app/main/default/objects/Account/fields/Line_3__c.field-meta.xml
<CustomField>
    <fullName>Line_3__c</fullName>
    <label>Address Line 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>