partial/force-app/main/default/objects/Account/fields/Link_or_Username__c.field-meta.xml
<CustomField>
    <fullName>Link_or_Username__c</fullName>
    <label>Link or Username</label>
    <length>200</length>
    <type>Text</type>
</CustomField>