partial/force-app/main/default/objects/Account/fields/MarketingConsent__c.field-meta.xml
<CustomField>
    <fullName>MarketingConsent__c</fullName>
    <label>MarketingConsent</label>
    <length>20</length>
    <type>Text</type>
</CustomField>