partial/force-app/main/default/objects/Account/fields/negotiatorId__c.field-meta.xml
<CustomField>
    <fullName>negotiatorId__c</fullName>
    <label>Negotiator Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>