partial/force-app/main/default/objects/Account/fields/nextCall__c.field-meta.xml
<CustomField>
    <fullName>nextCall__c</fullName>
    <label>Next Call</label>
    <type>Date</type>
</CustomField>