partial/force-app/main/default/objects/Account/fields/No_of_adults__c.field-meta.xml
<CustomField>
    <fullName>No_of_adults__c</fullName>
    <label>No of adults</label>
    <length>2</length>
    <type>Text</type>
</CustomField>