partial/force-app/main/default/objects/Account/fields/officeIds__c.field-meta.xml
<CustomField>
    <fullName>officeIds__c</fullName>
    <label>Office Ids</label>
    <length>20</length>
    <type>Text</type>
</CustomField>