partial/force-app/main/default/objects/Account/fields/Portal_Account__c.field-meta.xml
<CustomField>
    <fullName>Portal_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Portal Account</label>
    <type>Checkbox</type>
</CustomField>