partial/force-app/main/default/objects/Account/fields/PropertiesInterestedIn__c.field-meta.xml
<CustomField>
    <fullName>PropertiesInterestedIn__c</fullName>
    <label>Properties Interested In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Country</valueSetName>
    </valueSet>
</CustomField>