partial/force-app/main/default/objects/Account/fields/PropertyId__c.field-meta.xml
<CustomField>
    <fullName>PropertyId__c</fullName>
    <label>Property Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>