partial/force-app/main/default/objects/Account/fields/Reapit_Id_Calc__c.field-meta.xml
<CustomField>
    <fullName>Reapit_Id_Calc__c</fullName>
    <externalId>true</externalId>
    <label>Reapit Id Calc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>