partial/force-app/main/default/objects/Account/fields/Selling_Reason_Id__c.field-meta.xml
<CustomField>
    <fullName>Selling_Reason_Id__c</fullName>
    <label>Selling Reason Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>