partial/force-app/main/default/objects/Account/fields/Social_Name__c.field-meta.xml
<CustomField>
    <fullName>Social_Name__c</fullName>
    <label>Social Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>