partial/force-app/main/default/objects/Account/fields/solicitorId__c.field-meta.xml
<CustomField>
    <fullName>solicitorId__c</fullName>
    <label>Solicitor Id</label>
    <length>15</length>
    <type>Text</type>
</CustomField>