partial/force-app/main/default/objects/Account/fields/Source_Type__c.field-meta.xml
<CustomField>
    <fullName>Source_Type__c</fullName>
    <label>Source Type</label>
    <length>15</length>
    <type>Text</type>
</CustomField>