partial/force-app/main/default/objects/Account/fields/Supplier_Type_Id__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Type_Id__c</fullName>
    <label>Supplier Type Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>