partial/force-app/main/default/objects/Account/fields/TypeId__c.field-meta.xml
<CustomField>
    <fullName>TypeId__c</fullName>
    <label>Type Id</label>
    <length>25</length>
    <type>Text</type>
</CustomField>