partial/force-app/main/default/objects/Account/fields/UEN_Number__c.field-meta.xml
<CustomField>
    <fullName>UEN_Number__c</fullName>
    <label>UEN Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>