partial/force-app/main/default/objects/Account/fields/Vacation_Places__c.field-meta.xml
<CustomField>
    <fullName>Vacation_Places__c</fullName>
    <label>Vacation Places</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Scottish Highlands</fullName>
            </value>
            <value>
                <fullName>Norflok</fullName>
            </value>
            <value>
                <fullName>Windsor</fullName>
            </value>
            <value>
                <fullName>Pembrokeshire</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>