partial/force-app/main/default/objects/Account/recordTypes/Property_Agency.recordType-meta.xml
<RecordType>
    <fullName>Property_Agency</fullName>
    <active>true</active>
    <label>Property Agency</label>
</RecordType>