partial/force-app/main/default/objects/Account/recordTypes/PropertyDeveloper.recordType-meta.xml
<RecordType>
    <fullName>PropertyDeveloper</fullName>
    <active>false</active>
    <label>Property Developer</label>
</RecordType>