partial/force-app/main/default/objects/Account/listViews/All_Individual_Customers.listView-meta.xml
<ListView>
    <fullName>All_Individual_Customers</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_PHONE3</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>PC_LEAD_SOURCE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>PersonAccount.Individual_Customer</value>
    </filters>
    <label>All Individual Customers</label>
</ListView>