partial/force-app/main/default/objects/Account/listViews/All_Property_Agencies.listView-meta.xml
<ListView>
    <fullName>All_Property_Agencies</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.URL</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.RATING</columns>
    <columns>ACCOUNT_SOURCE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>IsActive__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Property_Agency</value>
    </filters>
    <label>All Property Agencies</label>
</ListView>