partial/force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>IS_PERSON_ACCOUNT</columns>
    <columns>ACCOUNT.RATING</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>