partial/force-app/main/default/objects/Account/listViews/MyAccounts.listView-meta.xml
<ListView>
    <fullName>MyAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>PC_LEAD_SOURCE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.RATING</columns>
    <columns>PropertiesInterestedIn__c</columns>
    <columns>IS_PERSON_ACCOUNT</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Mine</filterScope>
    <label>My Accounts</label>
</ListView>