partial/force-app/main/default/objects/Account/listViews/Reapit_Accounts.listView-meta.xml
<ListView>
    <fullName>Reapit_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>PC_EMAIL</columns>
    <columns>Reapit_ID__c</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Reapit_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Reapit Accounts</label>
</ListView>